tests/negative/test_block_passing_exit.orb
fnc main () () {
    block b0 i32 {
        exit b0 true;
    };
};